# apps/backend/api/apispec.json
@@ -1092,7 +1092,22 @@
                                 }
                             }
                         }
+                    },
+                    "ingredients":{
+                        "type": "array",
+                        "items":{
+                            "type": "object",
+                            "properties": {
+                                "id":{
+                                    "type": "number"
+                                },
+                                "name":{
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
+                    
                 }
             }
         }
